Implement initial save command (Level-7)